package com.ecommerce.project.model;

public class Cliente extends Usuario{
    private String cpf;
    private String telefone;
    //TODO: terminar quando a classe carrinho de compra estiver pronta
    // sim eu fiz o diagrama de cima para baixo, fui burro
}
