package com.ecommerce.project.model;

public enum NivelAcesso {
    ADMIN_TOTAL,
    GERENTE,
    SUPORTE_CLIENTE
}