package com.ecommerce.project.model;

public abstract class Usuario {
    private long id;
    private String nome;
    private String email;
    private String senha;

    public Usuario() {
    }

    public Usuario(long id, String nome, String email, String senha) {
        this.id = id;
        this.nome = nome;
        this.email = email;
        this.senha = senha;
    }

    public long getId() {
        return id;
    }

    public void setId(long id) {
        this.id = id;
    }

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public String getSenha() {
        return senha;
    }

    public void setSenha(String senha) {
        this.senha = senha;
    }

    boolean fazerLogin(String email, String senha){
        return (this.email.equals(email) && this.senha.equals(senha));
        // o retorno ja vai ser verdadeiro ou falso;
    }
}
